--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -18,7 +18,7 @@ At a high-level, transfomer models make use of the [self-attention mechanism](ht
 - [Transformers (illustrated)](https://jalammar.github.io/illustrated-transformer)
 - [Self-attention & multi-head attention](https://devennn.github.io/2020/self-and-multihead-attention) 
 
-Here is a simplified [visual](https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0) of how attention mechanism works and how it compares to LTSM and RNN architectures:
+Here is a simplified [visual](https://towardsdatascience.com/illustrated-guide-to-transformers-step-by-step-explanation-f74876522bc0) of how attention mechanism works, and how it compares to LTSM and RNN architectures:
 
 ![AttentionMechanism](/assets/images/2024-04/atm.png)
 
@@ -30,9 +30,11 @@ As shown above, this technique overcomes the limitation of previous NLP models w
 
 
 ## Are transformers that much more powerful in healthcare?
-Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months will likely be challenged and revised.  My goal here is to provide a small snapshot of studies that were compelling.  
+Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months will likely be challenged and revised.  My goal here is to provide a small snapshot of studies that I found compelling.  
 
-In the February 2024 paper ['Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks'](https://link.springer.com/article/10.1007/s10916-024-02043-5), authors from Europe highlighted 
+In the February 2024 paper ['Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks'](https://link.springer.com/article/10.1007/s10916-024-02043-5), authors from Europe highlighted some of the key benefits and challenges with genAI technology:
+
+![Fig1](/assets/images/2024-04/Fig1.png)
 
 https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-024-02459-6#author-information
 
