--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -36,6 +36,11 @@ In the February 2024 paper ['Transformer Models in Healthcare: A Survey and Them
 
 ![Fig1](/assets/images/2024-04/Fig1.png)
 
+![Fig2](/assets/images/2024-04/Fig2.png)
+
+
+Yet, in another study published by Stanford, 
+
 https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-024-02459-6#author-information
 
 https://www.nature.com/articles/s41746-024-01010-1#author-information
