--- a/_archive/_posts_backlog/2024-04-22-tbd.md
+++ b/_archive/_posts_backlog/2024-04-22-tbd.md
@@ -29,27 +29,27 @@ Here is a simplified [visual](https://towardsdatascience.com/illustrated-guide-t
 As shown above, this technique overcomes the limitation of previous NLP models which ran into the problem of having short-term memory.  The result is that a computer can more accurately retain the meaning of longer input sequences when generating new output. 
 
 
-## Are transformers that much more powerful in healthcare?
-Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months will likely be challenged and revised.  My goal here is to provide a small snapshot of studies that I found compelling.  
+## Are transformers useful in healthcare?
+Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months is likely be challenged and revised.  My goal here is to provide a small snapshot of studies I found compelling.  
 
-In the February 2024 paper, [Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks](https://link.springer.com/article/10.1007/s10916-024-02043-5), authors from Europe highlighted some of the key benefits and challenges with genAI technology:
+In this January 2024 [study](https://www.nature.com/articles/s41746-024-01010-1#author-information), physicians at Stanford sought to use specialized instructional prompts that mimic the diagnostic reasoning criteria used by physicians.  The idea was to compare this method to [Chain-Of-Thought (CoT)](https://arxiv.org/abs/2201.11903) to assess whether LLMs can exhibit clinical reasoning.  They found that LLMs can imitate clinical reasoning processes when using the specialized prompts, but still cannot reason like a human.  The authors conclude that the finding is still significant, in that it provides rationale which can be vetted for accuracy by physicians.
+
+In the February 2024 paper [Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks](https://link.springer.com/article/10.1007/s10916-024-02043-5), authors from Europe highlighted some of the key benefits and challenges with genAI technology:
 
 ![Fig1](/assets/images/2024-04/Fig1.png)
 
 ![Fig2](/assets/images/2024-04/Fig2.png)
 
-It shouldn't come as a surprise that one of the biggest benefits would be improved operational efficiencies (A1-A4).  While EU counterparts probably face less documentation requirements than the US (as I wrote about in a previous [post]()), it does highlight the utility of AI systems to address a universal challenge: synthesizing data. 
+It shouldn't come as a surprise that one of the biggest benefits would be improved operational efficiencies (A1-A4).  While EU counterparts probably face less documentation requirements than the US (as I wrote about in a previous [post]()), it does highlight the utility of AI systems to address a universal challenge: synthesizing data.  
 
-On the flip side, I believe ethics and less human care will continue to challenge widespread adoption.  There still seems to be an interesting 
+In each of these examples, transformer models appear to provide varying levels of utility when it comes to administrative tasks, clinical reasoning, or 
 
 
-However, I am still a bit skeptical when it comes to personalized medicine, only because it is a nuanced  
 
-In another study published by Stanford researchers, 
+
+
 
 https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-024-02459-6#author-information
-
-https://www.nature.com/articles/s41746-024-01010-1#author-information
 
 ## Reasons to remain optimistic
 
