--- a/_posts/2024-04-22-tbd.md
+++ b/_posts/2024-04-22-tbd.md
@@ -29,8 +29,8 @@ Here is a simplified [visual](https://towardsdatascience.com/illustrated-guide-t
 As shown above, this technique overcomes the limitation of previous NLP models which ran into the problem of having short-term memory.  The result is that a computer can more accurately retain the meaning of longer input sequences when generating new output. 
 
 
-## Are transformers that much more powerful in healthcare?
-Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months will likely be challenged and revised.  My goal here is to provide a small snapshot of studies that I found compelling.  
+## Are transformers useful in healthcare?
+Now that we see how the transformer model has succeeeded over previous NLP architectures, let's take a look at how it is being evaluated in healthcare.  I should caveat this section by saying that this field is evolving very rapidly, so what has been published in recent months is likely be challenged and revised.  My goal here is to provide a small snapshot of studies I found compelling.  
 
 In the February 2024 paper, [Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks](https://link.springer.com/article/10.1007/s10916-024-02043-5), authors from Europe highlighted some of the key benefits and challenges with genAI technology:
 
@@ -40,7 +40,9 @@ In the February 2024 paper, [Transformer Models in Healthcare: A Survey and Them
 
 It shouldn't come as a surprise that one of the biggest benefits would be improved operational efficiencies (A1-A4).  While EU counterparts probably face less documentation requirements than the US (as I wrote about in a previous [post]()), it does highlight the utility of AI systems to address a universal challenge: synthesizing data.  This may provide a greater ROI to US healthcare organzations over time.  However, I would also caution that this by itself may not necessarily produce overall better health outcomes.
 
-Another study published by Stanford researchers, 
+In this January 2024 [study](https://www.nature.com/articles/s41746-024-01010-1#author-information), physicians at Stanford sought to use specialized instructional prompts that mimic the diagnostic reasoning criteria used by physicians.  The idea is was to compare this method to the [Chain-Of-Thought (CoT)](https://arxiv.org/abs/2201.11903) prompt engineering technique to assess whether LLMs can exhibit clinical reasoning.  The result was 
+
+
 
 https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-024-02459-6#author-information
 
