--- a/_archive/_posts_backlog/2024-05-24-tbd.md
+++ b/_archive/_posts_backlog/2024-05-24-tbd.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "A primer on AI ethics and regulation in healthcare"
 author: sandy
-categories: [ healthcare, EHR, AI ]
-image: assets/images/2024-03/iStock-1025882206_license.jpg
+categories: [ healthcare, AI, ethics, regulation ]
+image: assets/images/2024-05/tingey-injury-law-firm-resize.jpg
 featured: false
 hidden: false
 ---
