--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -25,9 +25,13 @@ I will focus on the neural networks component.
 ## Discriminative vs. Generative models
 Before I dive into discriminative and generative models, it was helpful for me to review the main approaches for handling machine learning tasks: supervised and unsupervised learning.  
 
-At a high level, supervised learning uses labeled inputs and outputs to fit a model.  Here, the machine algorithm learns the best mapping function from input to output.  Unsupervised learning differs in that there are no labeled inputs nor outputs.  Here, the machine learning algorithm learns the best mapping function that finds similarity among the input samples, and groups them based on that similarity as the output.  
+At a high level, supervised learning uses inputs (x) and outputs (y) to fit a model.  Here, the machine algorithm learns the best mapping function from input (labeled data) to output (labels).  
 
 [imagewithapples]
+
+Unsupervised learning differs in that there are no labeled inputs nor outputs.  Here, the machine learning algorithm learns the best mapping function that finds similarity among the input samples, and groups them based on that similarity as the output.  
+
+[imagewithapples2]
 
 The models that fall under each approach can be generally categorized as [discriminative or generative](https://www.turing.com/kb/generative-models-vs-discriminative-models-for-deep-learning).  By discriminative, the model aims to separate data points into different classes and learn the decision boundaries.  By generative, the model aims to generate new data points similar to the data it were trained on:
 
