--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -27,11 +27,14 @@ Before I dive into discriminative and generative models, it was helpful for me t
 
 At a high level, supervised learning uses inputs (x) and outputs (y) to fit a model.  Here, the machine algorithm learns the best mapping function from input (labeled data) to output (labels).  
 
-[imagewithapples]
+![supervised](/assets/images/2024-06/supervised.png){:.centered}
+
+{:.image-caption}
+*Credit: Denecke, K., May, R. & Rivera-Romero, O. Transformer Models in Healthcare: A Survey and Thematic Analysis of Potentials, Shortcomings and Risks. J Med Syst 48, 23 (2024).  Used under [CC BY 4.0.](https://creativecommons.org/licenses/by/4.0)*
 
 Unsupervised learning differs in that there are no labeled inputs nor outputs.  Here, the machine learning algorithm learns the best mapping function that finds similarity among the input samples, and groups them based on that similarity as the output.  
 
-[imagewithapples2]
+![unsupervised](/assets/images/2024-06/unsupervised.png){:.centered}
 
 The models that fall under each approach can be generally categorized as [discriminative or generative](https://www.turing.com/kb/generative-models-vs-discriminative-models-for-deep-learning).  By discriminative, the model aims to separate data points into different classes and learn the decision boundaries.  By generative, the model aims to generate new data points similar to the data it were trained on:
 
