--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -25,7 +25,7 @@ I will focus on the neural networks component.
 ## Discriminative vs. Generative models
 Before I dive into discriminative and generative models, it was helpful for me to review the main approaches for handling machine learning tasks: supervised and unsupervised learning.  
 
-At a high level, supervised learning uses inputs (x) and outputs (y) to fit a model.  Here, the machine algorithm learns the best mapping function from input (labeled data) to output (labels).  
+At a high level, supervised learning uses inputs (x) and outputs (y) to fit a model.  Here, the machine algorithm learns the best mapping function from input ("labeled data") to output ("labels").  
 
 ![supervised](/assets/images/2024-06/supervised.png){:.centered}
 
@@ -36,9 +36,10 @@ Unsupervised learning differs in that there are no labeled inputs nor outputs.  
 
 ![unsupervised](/assets/images/2024-06/unsupervised.png){:.centered}
 
-The models that fall under each approach can be generally categorized as [discriminative or generative](https://www.turing.com/kb/generative-models-vs-discriminative-models-for-deep-learning).  By discriminative, the model aims to separate data points into different classes and learn the decision boundaries.  By generative, the model aims to generate new data points similar to the data it were trained on:
 
-[image]
+The models that fall under each approach can be generally categorized as [discriminative or generative](https://www.turing.com/kb/generative-models-vs-discriminative-models-for-deep-learning).  By discriminative, the model aims to separate data points into different classes and learn the decision boundaries.  By generative, the model aims to generate new data points similar to the data it was trained on:
+
+![discriminative_generative](/assets/images/2024-06/discriminative_generative.png){:.centered}
 
 More specifically (mathematically), we tend to see discriminative models used in supervised learning, where the goal is to learn a mapping between an input and output variable.  Generative models are typically used in unsupervised learning, where the goal is to learn the underlying probability distribution of the data:
 
@@ -46,7 +47,7 @@ More specifically (mathematically), we tend to see discriminative models used in
 
 https://www.adventuresinmachinelearning.com/generative-vs-discriminative-models-understanding-the-differences/#:~:text=Discriminative%20models%20are%20typically%20used%20in%20supervised%20learning,learn%20the%20underlying%20probability%20distribution%20of%20the%20data.
 
-Neural networks are an example of generative models, although in my research these categorizations are not [mutually exclusive](https://stats.stackexchange.com/questions/403968/linking-generative-discriminative-models-to-supervised-and-unsupervised-learnin) and is often based on the specific use case.  For example, 
+Neural networks can be considered an example of generative models, although in my research these categorizations are not [mutually exclusive](https://stats.stackexchange.com/questions/403968/linking-generative-discriminative-models-to-supervised-and-unsupervised-learnin) and is often based on the specific use case.  For example, 
 
 
 
