--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -43,7 +43,8 @@ The models that fall under each approach can be generally categorized as [discri
 
 More specifically (mathematically), we tend to see discriminative models used in supervised learning, where the goal is to learn a mapping between an input and output variable.  Generative models are typically used in unsupervised learning, where the goal is to learn the underlying probability distribution of the data:
 
-[image]
+![discriminative-model](/assets/images/2024-06/discriminative-model.png){:.centered}
+
 
 https://www.adventuresinmachinelearning.com/generative-vs-discriminative-models-understanding-the-differences/#:~:text=Discriminative%20models%20are%20typically%20used%20in%20supervised%20learning,learn%20the%20underlying%20probability%20distribution%20of%20the%20data.
 
