--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -52,7 +52,9 @@ Neural networks can be either discriminative or generative models, based on the 
 As for the Eko Analysis System, I would venture to say the underlying neural networks are discriminative models.  According to their [FAQs](https://support.ekohealth.com/hc/en-us/articles/13180195624347-Eko-App-FAQ), it states that "The software [EAS] analyzes simultaneous ECG and heart sounds. The software detects the presence of atrial fibrillation and normal sinus rhythm from the ECG signal."  There does not seem to be any indication that the software is generating new data, but rather is classifying the data points into distinct categories.  It is also important to note that the FDA has not cleared any generative AI tools to-date.  
 
 # Neural networks are a black box, and I'm worried
-So with all this discussion between discriminative and generative models, why does this matter in practice?  AI systems as black boxes are nothing new, and I first encountered this during my time at IBM Watson.  Fast forward a decade though, and the dilemma still remains.  Why?  
+So with all this discussion on discriminative vs. generative models, why does this matter in practice?  AI systems as black boxes are nothing new, as I first encountered this during my time at IBM Watson.  Fast forward a decade, and the algorithms powering today's AI systems are far more advanced and not easily understood, even by the researchers who developed them.
+
+To get a bird's eye view on why this is, this 
 
 In reviewing the theory behind neural networks as a generative model, I see the valid concern that it is a black box.  If one considers that neural network architectures (specifically the transformer architecture) is forming the basis of nearly every generative AI application on the market today, could this spell trouble for healthcare?
 
