--- a/_archive/_posts_backlog/2024-06-03-tbd.md
+++ b/_archive/_posts_backlog/2024-06-03-tbd.md
@@ -47,13 +47,19 @@ The models that fall under each approach can be generally categorized as [discri
 
 While neural networks are typically associated with unsupervised learning tasks, the lines are somewhat blurred as discussed in some [online forums](https://stats.stackexchange.com/questions/403968/linking-generative-discriminative-models-to-supervised-and-unsupervised-learnin).  Thus, I would say they can be either discriminative or generative models, based on the specific use case.  For example, neural networks can be used for image classification (convolutional neural networks) or for generating new data (transformers).
 
-As for the Eko Analysis System, the underlying neural networks are probaby discriminative models.  According to their [FAQs](https://support.ekohealth.com/hc/en-us/articles/13180195624347-Eko-App-FAQ), it states that "The software [EAS] analyzes simultaneous ECG and heart sounds. The software detects the presence of atrial fibrillation and normal sinus rhythm from the ECG signal."  There does not seem to be any indication that the software is generating new data, but rather is classifying the data points into distinct categories.  It is also important to note that the FDA has not cleared any generative AI devices to-date.  
+As for the Eko Analysis System, the underlying neural networks are probably discriminative models.  According to their [FAQs](https://support.ekohealth.com/hc/en-us/articles/13180195624347-Eko-App-FAQ), it states that "The software [EAS] analyzes simultaneous ECG and heart sounds. The software detects the presence of atrial fibrillation and normal sinus rhythm from the ECG signal."  There does not seem to be any indication that the software is generating new data, but rather is classifying the data points into distinct categories.  It is also important to note that the FDA has not cleared any generative AI devices to-date.  
 
 # Black boxes vs. glass boxes
-So with all this discussion on discriminative vs. generative models, why does this matter in practice?  AI systems as black boxes are nothing new, as I first encountered this during my time at IBM Watson.  Fast forward a decade, and the algorithms powering today's AI systems are far more advanced and not easily understood, even by the researchers who developed them.
+So with all this discussion on discriminative vs. generative models, why does this matter in practice?  AI systems as black boxes are nothing new, as I first encountered this during my time at IBM Watson.  Fast forward a decade, and the algorithms powering today's AI systems are far more advanced and not easily understood, even by the researchers who developed them.  
 
-To get a bird's eye view on why this is, let's take a look at the intricacies of a neural network with many layers:
+Much of this advancement was due to the arrival of deep learning algorithms in 2012.
 
+To get a bird's eye view on why this is, let's take a look at the [intricacies](https://spectrum.ieee.org/what-is-deep-learning) of a neural network with many layers:
+
+
+![nn](/assets/images/2024-06/nn.png){:.centered}
+
+Complicated, right?  Imagine trying to unravel all of this and explaining it to a non-computer person, let alone someone in a completely different field like healthcare. 
 
 
 In reviewing the theory behind neural networks as a generative model, I see the valid concern that it is a black box.  If one considers that neural network architectures (specifically the transformer architecture) is forming the basis of nearly every generative AI application on the market today, could this spell trouble for healthcare?
@@ -72,6 +78,3 @@ https://www.techtarget.com/healthtechanalytics/feature/Navigating-the-black-box-
 I appreciated this insightful and hopeful article for the future of healthcare.  Perhaps with this new wave of AI, there is a renewed commitment by people and processes to enable a better healthcare experience for everyone.  Finally, may we put that old fax machine to rest.
 
 https://www.adventuresinmachinelearning.com/generative-vs-discriminative-models-understanding-the-differences/#:~:text=Discriminative%20models%20are%20typically%20used%20in%20supervised%20learning,learn%20the%20underlying%20probability%20distribution%20of%20the%20data.
-
-
-(https://stats.stackexchange.com/questions/403968/linking-generative-discriminative-models-to-supervised-and-unsupervised-learnin) 
