--- a/_posts/2024-06-03-tbd.md
+++ b/_posts/2024-06-03-tbd.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Black box AI: The challenge for healthcare adoption"
 author: sandy
 categories: [ AI, healthcare ]
-image: assets/images/2023-08/healthcare-is-keeping-the-fax-machine-alive.png
+image: assets/images/2024-06/box.jpg
 ---
 After writing my last post, I was intrigued to learn a bit more about the black box phenomenon in AI models.  More pressing is understanding their implication for healthcare (perceived vs. actual).  This is not to say that AI has not already been embedded into medical products today, judging by the increasing number of FDA-approved AI algorithms.  However, I think it is important to understand the distinction of the algorithms embedded into such products.  In this post, I aim to provide a technical lens into this topic.  
 
