--- a/_archive/_posts_backlog/2024-07-04-tbd.md
+++ b/_archive/_posts_backlog/2024-07-04-tbd.md
@@ -12,26 +12,26 @@ June was a busy month, but I wanted to share some insights into year one of writ
 
 
 ## Goal
-I had toyed around with the idea of starting a blog for some time, but I never found the time to do it.  I now see why - blogging is a lot of work.  It is not for the faint of heart, so its important to feel personally motivated to do it.  For me, I was learning a lot of new cool technology over the years, but I was also frustrated that I never had a chance to go really deep into any of it.  I often felt in operator mode, and there was a part of me that wanted to nerd out a bit, and spend time learning, thinking, asking.
+I had toyed around with the idea of starting a blog for some time, but I never found the time to do it.  I now see why - blogging is a lot of work.  It is not for the faint of heart, so it is important to feel personally motivated to do it.  For me, I was learning a lot of new cool technology over the years, but I was also frustrated that I never had a chance to go really deep into any of it.  I often felt in operator mode, and there was a part of me that wanted to nerd out a bit, and spend time learning, thinking, asking.
 
 
 ## Lessons learned:
 I wanted to document some of the things I discovered in this journey, some of which were surprising and fun, and others that were downright challenging.  Here are the top 10 things that come to mind:
 
 ### 1. Owning content  
-One of the initial dilemmas I came across was where to host my writings.  I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I personally did not like this idea, because I wanted more control over the look and feel for my content.  Thus I chose to host my site on GitHub, using GitHub pages and Jekyll as a front-end.  This took a bit of work in re-learning web development, but I've been happy with the results.
+One of the initial dilemmas I came across was where to host my writings.  I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I wanted more control over the look and feel for my content, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, but I've been pleased with the results.
 
 ### 2. Time and research, research, research  
-Writing a blog post takes a lot of time, and a lot of research.  It takes a different set of skills to identify the topic you want to write about, and then find the information to substantiate it.  The research part was interesting, because I often found myself digging around everywhere from LinkedIn to business journals to academic research papers and technical blogs.  The task of synthesizing this information and distilling it down for the everyday reader takes a lot more time than you realize.
+Writing a blog post takes a lot of time, and a lot of research.  It takes a different set of skills to identify the topic you want to write about, and then find the information to substantiate it.  I often found myself digging around LinkedIn and business journals to academic research papers and technical blogs.  The task of synthesizing this information and distilling it down for the everyday reader takes a lot more time than you realize.
 
 ### 3. Less is more  
-Did you know that a blog post that reads between 5-7 minutes has the highest level of engagement (link)?  This was a real challenge because this required being able to explore a topic with enough depth, without completely losing your audience.  There were some posts I would have loved to expand in detail, but it was a deliberate choice to keep it consumable.  I ended up having to delegate further discussion in a link or leave it out completely. 
+Did you know that a blog post that reads between 5-7 minutes has the highest level of engagement?  This required being able to explore a topic with enough depth, without completely losing your audience.  There were some posts I would have loved to expand in detail, but it was a deliberate choice to keep it consumable.  I ended up having to delegate further discussion in a link or leave it out completely. 
 
-### 4. Tech tutorials are hard, but there is no substitute for hands-on learning
-Perhaps my least favorite was writing the technical tutorials.  Interestingly enough, I initially started with technical writings for the first 6 months or so, before switching up to business writings the last 6 months (I like both).  I found that the coding part was easy, but it was way harder to explain it.  Along with point 3, being able to convey key concepts using fewer words was more difficult than I realized.
+### 4. Tech tutorials are hard
+Perhaps my least favorite was writing the technical tutorials.  Interestingly enough, I initially started with technical writings for the first 6 months or so, before switching up to business writings the last 6 months (I like both).  The coding part was easy, but it was way harder to explain it.  Along with point 3, being able to convey key concepts using fewer words was more difficult than I realized.
 
 ### 5. Finding your voice  
-One thing I had often read with writing is that the author eventually finds their voice.  I had no idea what this meant initially, but I suppose its the idea that as you continue to write, you will recognize that you have a certain style in how you come across in your writing.  Are you more creative or demure?  More business-oriented or research-focused?  For me, I liked to err on the side of being as factual as possible, and would often find myself researching to make sure any claim I made was substantiated.
+One thing I had often read with writing is that the author eventually finds their voice.  As you continue to write, you will recognize that you have a certain style in how you come across in your writing.  Are you more creative or demure?  More business-oriented or research-focused?  I liked to err on the side of being as factual as possible, research extensively to substantiate any claims I was making.
 
 ### 6. The post where I learned the most
 When I survey the different topics I wrote about, I ended up learning the most from my post on word embeddings.  It turned out to be my longest post (14 minutes to read), and the longest one to develop.  I remember spending up to 2 weeks putting this together.  It really forced me to understand one of the key building blocks of deep learning frameworks.  As a result, I feel I have a firmer understanding of why AI has become so powerful in recent years.  
@@ -50,18 +50,7 @@ I knew when I started writing that I wanted it to be more substantial than a sho
 
 
 ## What's next
-Athough I am embarking on a new journey soon, I have an ever-growing list of topics I would like to explore in the next year.  Due to time limitation, I may have to change up the form - i.e., less well-researched posts.  In no particular order, here are topics of interest:
-
-- Building a GPT from scratch
-- CNNs with images
-- Explainable AI for healthcare
-- Why are healthcare systems consistenly ranked top in Switz, Aus
-- AI evaluation frameworks from CHAI, Health AI partnership
-- How can we educate all healthcare stakeholders to better understand AI
-- Generative AI for missing healthcare data
-- Patient education as a use case for generative AI
-- Creativity vs. Consistency in AI models (for drug discovery, rare disease)
-
+Athough I am embarking on a new journey soon, I have an ever-growing list of topics I would like to explore in the next year.  Due to time limitation, I may have to change up the form.
 
 ## Conclusion
 I've really enjoyed my year where I could dedicate substantial time to write.  
