--- a/_archive/_posts_backlog/2024-07-04-tbd.md
+++ b/_archive/_posts_backlog/2024-07-04-tbd.md
@@ -11,12 +11,12 @@ hidden: false
 June was a busy month, but I wanted to share some insights into year one of writing my blog, Health Tech Bytes.  In this post, I share my motivation for writing, important lessons I learned along the way, and what's next for year two.  I hope my journey is helpful for anyone looking for fresh ways to educate themselves, teach others, or find a passion project.
 
 ## Goal
-I had toyed around with the idea of starting a blog for some time, but I never found the time to do it.  I now see why - blogging is a lot of work.  It is not for the faint of heart, so it is important to feel personally motivated to do it.  I was learning a lot of new cool technology over the years, but I never had a chance to go really deep into any of it.  I also wanted to further explore healthcare issues that continue to plague this country, irregardless of what technology is available (we've all been there).  There was a part of me that wanted to nerd out a bit, and spend time to learn, think, ask.
+I had toyed around with the idea of starting a blog for some time, but I never found the time to do it.  I now see why - blogging is a lot of work.  It is not for the faint of heart, so it is important to feel personally motivated to do it.  I was learning a lot of new cool technology over the years, but I never had a chance to go really deep into any of it.  I also wanted to further explore healthcare issues that continue to plague this country, irregardless of what technology is available.  I wanted to nerd out a bit and spend time to learn, think, ask all of the hard questions.
 
 ## Lessons learned:
 I wanted to document some of the things I discovered in this journey, some of which were surprising and fun, and others that were downright challenging.  Here are the things that come to mind:
 
-### 1. Owning content  
+### 1. Owning content 
 I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I wanted more control over the look and feel for my work, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, but I enjoyed the process.
 
 ### 2. Time and research, research, research  
@@ -26,22 +26,16 @@ Writing a blog post takes a lot of time, and a lot of research.  It takes a diff
 Did you know that a blog post that reads between 5-7 minutes has the highest level of engagement?  This requires being able to explore a topic with enough depth, without completely losing your audience.  There were some posts I would have loved to expand in detail, but I ended up having to delegate further discussion in a link or leave it out completely. 
 
 ### 4. Tech tutorials are hard
-Perhaps my least favorite was writing the technical tutorials.  The coding part was easy, but it was way harder to explain it.  The task of synthesizing technical information and distilling it down for the everyday reader takes a lot more time than you realize.
+Perhaps my least favorite was writing the technical tutorials.  The coding part was easy, but it was way harder to explain it.  The task of synthesizing technical information for the everyday reader is a bit of an art, and takes a lot more time than you realize.
 
 ### 5. Finding your voice  
-One thing I had often read with writing is that the author eventually finds their voice.  Are you more creative or traditional?  More business-oriented or research-focused?  I think I found mine in objectivity, and I enjoyed the research process to substantiate claims that I read or adopted as my own.
+One thing I had often read with writing is that the author eventually finds their voice.  Are you more creative or traditional?  More business-oriented or research-focused?  I found mine in objectivity, and I enjoyed the research process to substantiate claims that I read or adopted as my own.
 
 ### 6. The post where I learned the most
 When I survey the different topics I wrote about, I ended up learning the most from my post on word embeddings.  It turned out to be my longest post (14 minutes to read), and ironically, the most annoying one to develop.  It really forced me to understand one of the key building blocks of deep learning frameworks.
 
 ### 7. Sources of inspiration  
 I was actually surprised that I found a lot of inspiration in music.  I really identified with the creative process involved in making music, which I would often find in videos.  What you often see in a final performance is the result of many hours of composition, practice, and revisions behind the scenes.  
-
-### 8. Surprises during the writing process  
-There were some writings that were a straight deluge of thoughts.  But there were others that were painfully slow, where I dreaded having to do the research, rethink what I wanted to say, or go through the revision process.  The final result was always satisfying, but the journey had its ups and downs.
-
-### 9. ChatGPT lives up to its hype 
-I'd have to imagine that writing without ChatGPT was way harder a few years ago.  To that end, the tool is living up to its name.  I found it super helpful, especially when it came to learning deep technical topics quickly.  I was amazed how fast it surfaced (mostly) relevant information; as such, it helped speed up my research process.  
 
 ### 10. Know how much time you will commit
 I wanted my writing to be more substantial than a short post on LinkedIn, but I also did not want it to become a research paper (there is value in both).  I set a modest target, which was to publish once a month.  I really have to give a thumbs up to folks who write much more often than that, and I can only hope to have that level of consistency.
