--- a/_archive/_posts_backlog/2024-07-04-tbd.md
+++ b/_archive/_posts_backlog/2024-07-04-tbd.md
@@ -17,7 +17,7 @@ I had toyed around with the idea of starting a blog for some time, but I never f
 I wanted to document some of the things I discovered in this journey, some of which were surprising and fun, and others that were downright challenging.  Here are the top things that come to mind:
 
 ### 1. Owning content 
-I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I wanted more control over the look and feel for my work, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, but I enjoyed the process.
+I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I wanted more control over the look and feel for my work, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, which I hadn't done since the mid-2000s.
 
 ### 2. Time commitment
 I wanted my writing to be more substantial than a LinkedIn post, but I also did not want it to become a research paper (there is value in both).  I set a modest target, which was to publish once a month.  A big thumbs up to those who write much more often than that, and I hope to become a more proficient writer over time.
@@ -41,4 +41,4 @@ I was actually surprised that I found a lot of inspiration in music.  I really i
 Athough I am embarking on a new journey soon, I have an ever-growing topic list I would like to explore in the next year.  There are so many facets to healthcare and technology, especially with AI becoming mainstream.  I will also be experimenting with writing shorter articles, and hopefully writing more frequently.  I don't forsee the ability to go as in-depth as I would like to, so that could take some adjustment.  However, I am committed to being consistent.
 
 ## Conclusion
-I never foresaw how much writing (especially for the public) would take a substantial portion of my time, but I've enjoyed the process and learned a lot about myself.  In a time where there's endless pressure to be in operator mode, it is helpful to take a step back and take inventory of what's important to you personally.  For me, writing is not just for career growth, but for personal growth as well.  I wanted to be able to see how my writing evolved over time, and see how my views of today were different than the views of some years ago.  I learned a ton, and I don't want to let the knowledge go to waste.  Here's to another year of writing and growing!
+I never foresaw how much time writing (especially for the public) would take, but I've enjoyed the process and learned a lot about myself.  In a time where there's endless pressure to be in operator mode, it is helpful to take a step back and take inventory of what's important to you.  For me, writing is not just for career growth, but for personal growth as well.  I wanted to be able to see how my thoughts evolved over time, and how my views of today are different than my views from some years ago.  Its interesting to see how much knowledge you acquire when you force yourself to write!  Here's to another year of writing and growing.
