--- a/_posts/2024-07-04-tb.md
+++ b/_posts/2024-07-04-tb.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "One year of writing Health Tech Bytes"
+title:  "Reflecting on one year with Health Tech Bytes"
 author: sandy
 categories: [ writing ]
-image: assets/images/2024-05/tingey-injury-law-firm-resize.jpg
+image: assets/images/2024-05/assets/images/2024-07/javier-allegue-barros-C7B-ExXpOIE-unsplash_resize.jpg
 featured: false
 hidden: false
 ---
@@ -17,7 +17,7 @@ I had toyed around with the idea of starting a blog for some time, but I never f
 I wanted to document some of the things I discovered in this journey, some of which were surprising and fun, and others that were downright challenging.  Here are the top things that come to mind:
 
 ### 1. Owning content 
-LinkedIn, Medium, and Substack are popular places for people to write, but they don't give full ownership to the authors.  I wanted more control over the look and feel for my work, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, which I hadn't done since the mid-2000s.
+I knew LinkedIn, Medium, and Substack were popular places for people to share their thoughts, but they didn't really own their content.  I wanted more control over the look and feel for my work, and chose to host my site using GitHub pages and Jekyll.  This took a bit of work in re-learning web development, which I hadn't done since the mid-2000s.
 
 ### 2. Time commitment
 I wanted my writing to be more substantial than a LinkedIn post, but I also did not want it to become a research paper (there is value in both).  I set a modest target, which was to publish once a month.  A big thumbs up to those who write much more often than that, and I hope to become a more proficient writer over time.
@@ -34,11 +34,14 @@ Perhaps my least favorite was writing the technical tutorials.  The coding part 
 ### 6. The post where I learned the most
 When I survey the different topics I wrote about, I ended up learning the most from my post on word embeddings.  It turned out to be my longest post (14 minute read), and ironically, the most annoying one to develop.  It really forced me to understand one of the key building blocks of deep learning frameworks.
 
-### 7. Finding inspiration
-I was actually surprised that I found a lot of inspiration in music.  I really identified with the creative process involved in making music, which I would often find in behind-the-scene videos.  What you often see in a final performance is the result of many hours of composition, practice, and revisions.
+### 7. Sources of inspiration  
+I was actually surprised that I found a lot of inspiration in music.  I really identified with the creative process involved in making music, which I would often find in behind-the-scene videos.  It certainly made me appreciate the amount of creativity, effort, and time that goes into making something from nothing. 
 
 ## What's next
 Athough I am embarking on a new journey soon, I have an ever-growing topic list I would like to explore in the next year.  There are so many facets to healthcare and technology, especially with AI becoming mainstream.  I will also be experimenting with writing shorter articles, and hopefully writing more frequently.  I don't forsee the ability to go as in-depth as I would like to, so that could take some adjustment.  However, I am committed to being consistent.
 
 ## Conclusion
-I never foresaw how much time writing (especially for the public) would take, but I've enjoyed the process and learned a lot about myself.  In a time where there's endless pressure to be in operator mode, it is helpful to take a step back and take inventory of what's important to you.  For me, writing is not just for career growth, but for personal growth as well.  I wanted to be able to see how my thoughts evolved over time, and how my views of today are different than my views from some years ago.  Its interesting to see how much knowledge you acquire when you force yourself to write!  Here's to another year of writing and growing.
+I never foresaw how much time writing (especially for the public) would take, but I've enjoyed the process and learned a lot about myself.  For me, writing is not just for career growth, but for personal growth as well.  I had the opportunity to tinker with code at the lowest level, while writing about strategy at a broad level.  
+
+
+I wanted to be able to see how my thoughts evolved over time, and how my views of today are different than my views from some years ago.  Its interesting to see how much knowledge you acquire when you force yourself to write!  Here's looking forward to another year of writing and growing.
