--- a/_archive/_posts_backlog/2024-08-29-test.md
+++ b/_archive/_posts_backlog/2024-08-29-test.md
@@ -8,10 +8,18 @@ featured: false
 hidden: false
 ---
 
-Lately, I have reading a lot about environmental factors affecting healthcare, or what is more commonly known social determinants of health (SDOH).  Things such as one's financial situation, social circles, and places where we live, work, and play.  Interestingly, I came across a recent paper which highlights these non-clinical factors as playing a much bigger role in a individual's health outcome than utilizing healthcare services themselves.  What if we lived in a world where our healthcare services were optimized for the sickest of the sick? In this post, I take a look at our government's initiative for health and an exciting paper using LLMs to mine for SDOH in electronic health records.  
+Lately, I have reading a lot about environmental factors affecting healthcare, or what is more commonly known social determinants of health (SDOH).  These include one's financial situation, social circles, and the places they live, work, and play.  Interestingly, I came across a recent paper which highlights these non-clinical factors as playing a much bigger role in an individual's health outcome than utilizing healthcare services themselves.  What if we lived in a world where our healthcare services were optimized for the sickest of the sick? In this post, I take a look at our government's initiative for health and a promising research paper using LLMs to mine for SDOH from EHRs.
 
 ## White House Healthy People 2030
-Every decade since 1979, the US Department of Health and Human Services (HHS) puts out an interation of the Health People Initiative.  The goal is to create a healthier nation and track data-driven outcomes to measure progress towards that goal.  In 2020, HHS released the 5th iteration - Healthy People 2030.  So what's new for 2030?  Fortunately, there is an increased focus on SDOH, which was originally 
+Every decade since 1979, the US Department of Health and Human Services (HHS) puts out an iteration of the Health People Initiative.  This initiative aims to create a healthier nation and track data-driven outcomes to measure progress towards that goal.  In 2020, HHS released the 5th iteration - Healthy People 2030.  
+
+By background, SDOH has remained a core concept of the Healthy People since its inception, with its definition evolving over several iterations.  According to [https://pmc.ncbi.nlm.nih.gov/articles/PMC8478310], Healthy People 2020 included a goal to address social and physical environments that influence health - a clear commitment to reducing health inequities.  SDOH were defined as “the conditions in the environments where people are born, live, learn, work, play, worship, and age that affect a wide range of health, functioning, and quality-of-life outcomes and risks.”
+
+Here are the 5 social determinants of health domains used in Healthy People:
+
+[!][SDOH](/assets/images/2024-08/sdoh.png){:.centered}
+
+So what's new for 2030?  SDOH is now a [core priority](https://odphp.health.gov/healthypeople/priority-areas), with health disparaties [brought to light](https://journals.lww.com/jphmp/Fulltext/2021/11001/Healthy_People_2030__A_Call_to_Action_to_Lead.5.aspx) during the COVID-19 pandemic.
 
 ## LLMS and SDOH
 
