--- a/_archive/_posts_backlog/2024-08-29-test.md
+++ b/_archive/_posts_backlog/2024-08-29-test.md
@@ -19,7 +19,14 @@ Here are the 5 social determinants of health domains used in Healthy People:
 
 [!][SDOH](/assets/images/2024-08/sdoh.png){:.centered}
 
-So what's new for 2030?  SDOH is now a [core priority](https://odphp.health.gov/healthypeople/priority-areas), with health disparaties brought to light during the COVID-19 pandemic.  According to the [Journal of Public Health Management & Practice](https://journals.lww.com/jphmp/Fulltext/2021/11001/Healthy_People_2030__A_Call_to_Action_to_Lead.5.aspx), the pandemic highlighted how many Americans fell into a high-risk category for COVID-19 due to underlying health conditions.  Not surprisingly, this is a reflection of disparities in health, access to care, and underlying social determinants.
+So what's new for 2030?  SDOH is now a [core priority](https://odphp.health.gov/healthypeople/priority-areas), with health disparaties brought to light during the COVID-19 pandemic.  According to the [Journal of Public Health Management & Practice](https://journals.lww.com/jphmp/Fulltext/2021/11001/Healthy_People_2030__A_Call_to_Action_to_Lead.5.aspx), the pandemic highlighted how many Americans fell into a high-risk category for COVID-19 due to underlying health conditions.  Not surprisingly, this is a reflection of disparities in health, access to care, and underlying social determinants.  
+
+How is improvement measured?  
+
+
+
+
+I am bullish that an SDOH focus is a step in the right direction, as increasing disease burden continues to wear on healthcare stakeholders clinically and financially.
 
 
 ## Mining EHRs for SDOH evidence
