updated sdoh.png to sdoh.jpg

--- a/_posts/2024-08-29-test.md
+++ b/_posts/2024-08-29-test.md
@@ -17,7 +17,7 @@ By background, SDoH has remained a core concept of the Healthy People since its 
 
 Here are the 5 social determinants of health domains used in Healthy People:
 
-[!][SDOH](/assets/images/2024-08/sdoh.png){:.centered}
+[!][SDOH](/assets/images/2024-08/sdoh.jpg){:.centered}
 
 So what's new for 2030?  SDOH is now a [core priority](https://odphp.health.gov/healthypeople/priority-areas), with health disparaties brought to light during the COVID-19 pandemic.  According to the [Journal of Public Health Management & Practice](https://journals.lww.com/jphmp/Fulltext/2021/11001/Healthy_People_2030__A_Call_to_Action_to_Lead.5.aspx), the pandemic highlighted how many Americans fell into a high-risk category for COVID-19 due to underlying health conditions.  Not surprisingly, this is a reflection of disparities in health, access to care, and underlying social determinants.  
 
@@ -28,7 +28,7 @@ I think that a SDoH focus is a step in the right direction, as increasing diseas
 ## Mining EHRs for SDoH evidence
 Given the increased focus on SDoH post-pandemic, I think this is an exciting time for using AI with SDoH.  A few research papers have explored using large language models (LLMs) with social determinants of health. For example, this January 2024 study published in [NPJ Digital Medicine](https://arxiv.org/abs/2308.06354) explored extracting SDoH from free text in EHRs.  The results indicate that fine-tuned language models (i.e., retraining pre-trained models for a specialized task) were capable of extracting SDoH from clinical text.  This is a promising application of LLMs, by improving real-world evidence of SDoH.
 
-Another paper by researchers at Emory University [https://arxiv.org/html/2407.09688] sought to answer the question "Can LLMs streamline integration of SDOH for clinical studies by performing accurate, automatic, generalizable annotation of SDOH variables?"  The team looked at using LLMs to annotate >700 SDoH variables from multiple data sources (including EHRs). The incorporation of these additional variables improved model performance for predicting 30-day hospital readmission.  By using LLMs to automate annotation, they were able to avoid laborious manual annotation - a potentially huge time saver.
+Another paper by researchers at [Emory University](https://arxiv.org/html/2407.09688) sought to answer the question "Can LLMs streamline integration of SDOH for clinical studies by performing accurate, automatic, generalizable annotation of SDOH variables?"  The team looked at using LLMs to annotate >700 SDoH variables from multiple data sources (including EHRs). The incorporation of these additional variables improved model performance for predicting 30-day hospital readmission.  By using LLMs to automate annotation, they were able to avoid laborious manual annotation - a potentially huge time saver.
 
 ## Conclusion
 In this post, I reviewed SDoH as a key set of non-clinical factors affecting health outcomes.  Such health disparities were brought to light during the COVID-19 pandemic, and became an area of focus for the White House Healthy People 2030 initiative.  Recent AI advances, particularly LLMs, have demonstrated the capability to effectively mine data sources for SDoH evidence.  I remain bullish that these technologies can provide better insights and tailored treatments for at-risk patients.
